@@ -4,6 +4,7 @@ set( KNEMO_VERSION 0.7.3+svn )
 
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})
 
+set(KDE_MIN_VERSION "4.3.80")
 find_package( KDE4 REQUIRED )
 include( CheckLibraryExists )
 include( FindPackageHandleStandardArgs )
@@ -28,13 +29,6 @@ if ( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )
     endif ( NOT NO_WIRELESS_SUPPORT )
 
 endif ( ${CMAKE_SYSTEM_NAME} STREQUAL "Linux" )
-
-option (LEGACY_TRAY_ICON "Force the tray icon to be compiled as a KSystemTrayIcon." FALSE )
-if ( NOT LEGACY_TRAY_ICON )
-    if ( ${KDE_VERSION} VERSION_GREATER "4.3.80" )
-        set ( HAVE_KSTATUSNOTIFIERITEM 1 )
-    endif ( ${KDE_VERSION} VERSION_GREATER "4.3.80" )
-endif ( NOT LEGACY_TRAY_ICON )
 
 configure_file( ${CMAKE_CURRENT_SOURCE_DIR}/config-knemo.h.cmake
                 ${CMAKE_CURRENT_BINARY_DIR}/config-knemo.h
