@@ -233,11 +233,7 @@ enum ToolTipEnums
     ENCRYPTION       = 0x00800000
 };
 
-#ifdef HAVE_KSTATUSNOTIFIERITEM
 static const int defaultTip = STATUS | IP_ADDRESS | RX_BYTES | TX_BYTES | ESSID | LINK_QUALITY | DOWNLOAD_SPEED | UPLOAD_SPEED | ENCRYPTION;
-#else
-static const int defaultTip = INTERFACE | STATUS | IP_ADDRESS | RX_BYTES | TX_BYTES | ESSID | LINK_QUALITY | DOWNLOAD_SPEED | UPLOAD_SPEED | ENCRYPTION;
-#endif
 
 struct KNemoTheme
 {
