@@ -1694,9 +1694,6 @@ void ConfigDialog::setupToolTipMap()
     // Cannot make this data static as the i18n macro doesn't seem
     // to work when called to early i.e. before setting the catalogue.
     mToolTips.insert( INTERFACE, i18n( "Interface" ) );
-#ifndef HAVE_KSTATUSNOTIFIERITEM
-    mToolTips.insert( ALIAS, i18n( "Alias" ) );
-#endif
     mToolTips.insert( STATUS, i18n( "Status" ) );
     mToolTips.insert( UPTIME, i18n( "Connection Time" ) );
     mToolTips.insert( IP_ADDRESS, i18n( "IP Address" ) );
